# reproducible-linux-setup

./: .gitignore  Cargo.toml  README.md  bootstrap.sh
config.whitespace/: config.toml  flatpak-packages.toml  system-packages.toml
src/: main.rs
