[package]
name = "fedoraforge"
version = "0.1.0"
edition = "2021"
description = "Forge your perfect Fedora system with declarative configuration"
authors = ["FedoraForge Contributors"]
license = "MIT"
repository = "https://github.com/your-username/fedoraforge"
keywords = ["fedora", "linux", "configuration", "systemd", "declarative"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.1"
anyhow = "1.0"
dirs = "5.0"
sha2 = "0.10"
walkdir = "2.4"
regex = "1.10"
